--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,91 @@
-django
-djangorestframework
-djangorestframework_simplejwt
-psycopg2-binary
-dj-config-url
-python-decouple
-drf-yasg
-django-cors-headers
-pillow
-django-filter
-celery[redis]
-loguru
-coverage
-model_bakery
-django-cors-headers
-pyngrok
-beautifulsoup4
-lxml
-selenium
-webdriver_manager
-fake-useragent
-geopy
-social-auth-app-django
-channels
-channels-redis
-django-allauth
+amqp==5.1.1
+asgiref==3.7.2
+async-generator==1.10
+attrs==23.1.0
+beautifulsoup4==4.12.2
+billiard==4.1.0
+celery==5.3.0
+certifi==2023.5.7
+cffi==1.15.1
+channels==4.0.0
+channels-redis==4.1.0
+charset-normalizer==3.1.0
+click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
+coreapi==2.3.3
+coreschema==0.0.4
+coverage==7.2.7
+cron-descriptor==1.4.0
+cryptography==41.0.1
+decorator==5.1.1
+defusedxml==0.7.1
+dj-config-url==0.1.1
+Django==4.2.2
+django-allauth==0.54.0
+django-celery-beat==2.5.0
+django-cors-headers==4.1.0
+django-filter==23.2
+django-phonenumber-field==7.1.0
+django-timezone-field==5.0
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
+drf-yasg==1.21.6
+exceptiongroup==1.1.1
+fake-useragent==1.1.3
+future==0.18.3
+geocoder==1.38.1
+geographiclib==2.0
+geopy==2.3.0
+h11==0.14.0
+idna==3.4
+inflection==0.5.1
+itypes==1.2.0
+Jinja2==3.1.2
+kombu==5.3.1
+loguru==0.7.0
+lxml==4.9.2
+MarkupSafe==2.1.3
+model-bakery==1.12.0
+msgpack==1.0.5
+oauthlib==3.2.2
+outcome==1.2.0
+packaging==23.1
+phonenumbers==8.13.14
+Pillow==9.5.0
+prompt-toolkit==3.0.38
+psycopg2-binary==2.9.6
+pycparser==2.21
+PyJWT==2.7.0
+pyngrok==6.0.0
+PySocks==1.7.1
+python-crontab==2.7.1
+python-dateutil==2.8.2
+python-decouple==3.8
+python-dotenv==1.0.0
+python3-openid==3.2.0
+pytz==2023.3
+PyYAML==6.0
+ratelim==0.1.6
+redis==4.5.5
+requests==2.31.0
+requests-oauthlib==1.3.1
+selenium==4.10.0
+six==1.16.0
+sniffio==1.3.0
+social-auth-app-django==5.2.0
+social-auth-core==4.4.2
+sortedcontainers==2.4.0
+soupsieve==2.4.1
+sqlparse==0.4.4
+tqdm==4.65.0
+trio==0.22.0
+trio-websocket==0.10.3
+tzdata==2023.3
+uritemplate==4.1.1
+urllib3==2.0.3
+vine==5.0.0
+wcwidth==0.2.6
+webdriver-manager==3.8.6
+wsproto==1.2.0
